Animations-MediaQueries-Steps-Paralax

--- a/05-CSS3/css/master.css
+++ b/05-CSS3/css/master.css
@@ -24,3 +24,13 @@ main h1 {
 main h3 {
     text-align: center;
 }
+h1 span a:link,
+h1 span a:visited {
+    color: #fff;
+    text-decoration: none;
+    float:left;
+}
+@media (max-width: 414px) {
+    main {
+        width: 345px;
+    }
