--- a/08-jvascript/css/styles.css
+++ b/08-jvascript/css/styles.css
@@ -1,55 +1,64 @@
 body {
-	background-color: #f0dc68;
-	color: #333;
-	font-family: verdana;
-	font-size: 16px;
+    background-color: #f0dc68;
+    color: #333;
+    font-family: Arial;
+    font-size: 16px;
 }
-main {
-	background-color: #fff;
-	border-radius: 10px 0px 10px 0px;
-	margin: 0px auto;
-	width: 80%;
 
+main {
+    background-color: #ffffffcc;
+    border-radius: 10px 0px 10px 0px;
+    margin: 0px auto;
+    width: 80%;
 }
+
 main header h1 {
-	background-color: #333;
-	border-bottom: 4px solid #a09558;
-	border-radius: 10px 0px 10px 0px;
-	color: #fff;
-	font-size: 1.6rem;
-	padding: 20px;
-	text-align: center;
+    background-color: #333;
+    border-bottom: 4px solid #a09558;
+    border-radius: 10px 0px 10px 0px;
+    color: #fff;
+    font-size: 1.6rem;
+    padding: 20px;
+    text-align: center;
 }
+
 main header h1 span a:link,
 main header h1 span a:visited {
     color: #fff;
     text-decoration: none;
     float: left;
 }
+
 main section {
-	padding: 20px;
+    padding: 20px;
 }
+
 main section h2,
 main section h3 {
-	text-align: center;
+    background-color: #f0dc68;
+    border-radius: 10px 0px 10px 0px;
+    margin-top: 20px;
+    padding: 10px;
 }
+
 main section nav li {
-	list-style: none;
-	padding: 0; 
+    list-style: none;
+    padding: 0;
 }
 main section nav li a:link,
 main section nav li a:visited {
-	background-color: #333;
-	border-radius: 10px 0px 10px 0px;
-	color: #fff;
-	display: block;
-	margin: 2px;
-	padding: 10px;
-	text-decoration: none;
-	transition: all 0.5s ease-out;
-	width: 280px;
+    background-color: #333;
+    border-radius: 10px 0px 10px 0px;
+    color: #fff;
+    display: block;
+    margin: 2px auto;
+    padding: 10px;
+    text-decoration: none;
+    transition: all 0.4s ease-out;
+    width: 280px;
 }
+
 main section nav li a:hover {
-	color: #f0dc68;
-	transform: translateX(10px);
-}
+    color: #f0dc68;
+    transform: translateX(10px);
+} 
